--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -118,21 +118,23 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<h3>personal</h3>
 			<a href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
+			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
 			<a href="/microblog"><img src="/!g/pix/catidea.gif" alt=""> microblog <img src="/!g/pix/new1.gif"></a>
 			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
-			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
-			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections <img src="/!g/pix/new1.gif"></a>
-			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> gaming log</a>
-			<a title="everything about the music i love!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
-
+			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts <img src="!g/pix/caution1.gif" alt=""></a>
+			<h3>media logs</h3>
+			<a href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
+			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> video games</a>
+			<a title="WIP" href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows <img src="!g/pix/caution1.gif" alt=""></a>
+			<a title="WIP" href="/books"><img src="/!g/pix/book3.gif" alt=""> books <img src="!g/pix/caution1.gif" alt=""></a>
+			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movies</a>
 			<h3>misc</h3>
 			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
-			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
 			<a href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
 			<a href="webgarden/greenhouse.html"><img src="/!g/pix/home.gif" alt=""> webgarden</a>
 
