about, minor changes

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -44,7 +44,8 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 year olds from a small island called puerto rico. i've lived here pretty much my entire life. my first language is spanish despite my site being mostly in eng. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science. （*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
+					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 year olds from a small island called puerto rico. i've lived here pretty much my entire life. my first language is spanish despite my site being mostly in eng. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science.</p>
+				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i find it extremely difficult to write about who i am. i'm not sure why. i would say i know myself pretty well. but when comes to things like this, i am pretty horrible at it. hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"> but at the end of the day i just like being silly and having fun.</p>
@@ -61,7 +62,7 @@
 
 				<p><a title="art by blackrabbit-25" href="https://www.deviantart.com/blackrabbit-25" target="_blank"><img src="/!g/deco/blackrabbit25-book.gif" align="right" style="margin-top:-25px;"></a>so think of my website as a digital journal. i will share bits and pieces of my personal life, interests, passions, and even creations. <mark>my goal is simply to have a place on the internet where i can freely be myself without the chaos and limitations of social media. and to have fun</mark>, of course :3 i wouldn't be doing any of this if it wasn't fun for me.</p>
 
-				<p style="text-align: right"><b>last updated on: 08.apr.24</b></p>
+				<p style="text-align: right"><b>last updated on: 02.jun.24</b></p>
 			</div>
 		</div>
 	</div>
@@ -101,15 +102,16 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				<h3>general</h3>
-				<li>petting cats</li>
-				<li>sweets</li>
+				<li>cats</li>
+				<li>silly animals</li>
+				<li>chocolate milk</li>
 				<li>making lists</li>
 				<li>visual arts</li>
 				<li>horror</li>
 				<li>driving at night (with no traffic)</li>
 				<li>coding HTML and CSS</li>
 				<li>hand shakes</li>
-				<li>purple and yellow</li>
+				<li>the color purple and yellow</li>
 
 				<h3>video games</h3>
 				<li>portal 2</li>
@@ -124,7 +126,6 @@
 				<li>mob psycho 100</li>
 				<li>madoka magica</li>
 				<li>eizouken</li>
-				<li>chainsaw man</li>
 
 				<h3>films</h3>
 				<li>wall-e</li>
@@ -138,17 +139,12 @@
 				<li>joe pera talks with you</li>
 				<li>bee and puppycat</li>
 				<li>clarence</li>
-
-				<h3>animals</h3>
-				<li>cats! :3</li>
-				<li>any felines really</li>
-				<li>but top 3 big cats: lynx, tigers, cheetahs</li>
-				<li>seals</li>
 			</div>
 		</div>
 	</div>
 
-	<!-- 	interests linkes -->
+	<!--
+	 	interests linkes 
 	<div class="dislikes draggable">
 		<div class="header">i_hate_u.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
@@ -162,6 +158,7 @@
 			</div>
 		</div>
 	</div>
+-->
 
 	<div class="nostalgia draggable">
 		<div class="header"><img src="!g/folder.png" class="folder"> nostalgia<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
@@ -298,13 +295,13 @@
 			<div class="wrapper-in padding list">
 				you can find me in other places like...
 				<a title="e-mail" href="mailto:doqmeat@gmail.com"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
-				<li><a href="https://github.com/doqmeat" target="_blank">github</a></li>
+				<li><a title="here til the site gets inevitably nuked" href="https:/twitter.com/sepiarecord999" target="_blank">twitter</a></li>
 				<li><a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
+				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
 				<li><a href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
 				<li><a href="https://www.last.fm/user/lakiitu" target="_blank">last.fm</a></li>
-				<li><a href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
-				<li><a title="here til the site gets inevitably nuked" href="https:/twitter.com/sepiarecord999" target="_blank">twitter</a></li>
 				<li><a href="https://bsky.app/profile/doqmeat.com" target="_blank">bluesky</a></li>
+				<li><a href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
 			</div>
 		</div>
 	</div>
