--- a/doqmeat/notebook/sitely/graphics.html
+++ b/doqmeat/notebook/sitely/graphics.html
@@ -308,6 +308,7 @@
 		<img src="/!g/pix/bear.gif">
 		<img src="/!g/pix/bear-inside-mail.gif">
 		<img src="/!g/pix/smileyface.gif">
+		<img src="/!g/pix/tv1.gif">
 
 		<h3 id="tiny">tinnier</h3>
 
