--- a/doqmeat/notebook/F2U/preview/notebook.html
+++ b/doqmeat/notebook/F2U/preview/notebook.html
@@ -226,17 +226,17 @@ coded with love by des -->
 	<div id="wrapper-index">
 
 		<div class="tab">
-			<button class="tablinks tab4-b" onclick="openTab(event, 'tab4-wrapper')">tab 4</button>
-			<button class="tablinks tab3-b" onclick="openTab(event, 'tab3-wrapper')">tab 3</button>
-			<button class="tablinks tab2-b" onclick="openTab(event, 'tab2-wrapper')">tab 2</button>
-			<button class="tablinks tab1-b" onclick="openTab(event, 'tab1-wrapper')" id="defaultOpen">tab 1</button>
+			<button class="tablinks tab4-b" onclick="openTab('tab4-wrapper')">tab 4</button>
+			<button class="tablinks tab3-b" onclick="openTab('tab3-wrapper')">tab 3</button>
+			<button class="tablinks tab2-b" onclick="openTab('tab2-wrapper')">tab 2</button>
+			<button class="tablinks tab1-b" onclick="openTab('tab1-wrapper')" id="defaultOpen">tab 1</button>
 		</div>
 
 		<div class="tab2">
-			<button class="tablinks tab5-b" onclick="openTab(event, 'tab5-wrapper')">tab 5</button>
-			<button class="tablinks tab6-b" onclick="openTab(event, 'tab6-wrapper')">tab 6</button>
-			<button class="tablinks tab7-b" onclick="openTab(event, 'tab7-wrapper')">tab 7</button>
-			<button class="tablinks tab8-b" onclick="openTab(event, 'tab8-wrapper')">tab 8</button>
+			<button class="tablinks tab5-b" onclick="openTab('tab5-wrapper')">tab 5</button>
+			<button class="tablinks tab6-b" onclick="openTab('tab6-wrapper')">tab 6</button>
+			<button class="tablinks tab7-b" onclick="openTab('tab7-wrapper')">tab 7</button>
+			<button class="tablinks tab8-b" onclick="openTab('tab8-wrapper')">tab 8</button>
 		</div>
 
 		<!-- 	TAB 1 wrapper -->
