--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -6,52 +6,100 @@
 	<title>tv log</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="doqmeat's reading log">
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/tv1.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="" rel="stylesheet" type="text/css" media="all">
+	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 </head>
 
 <body>
-	<h1>TV log</h1>
-	<h2>current</h2>
-	<ul>
-		<li>dungeon meshi -- 21/24</li>
-		<li>home movies -- 47/42</li>
-		<li>revolutionary girl utena -- 27/39</li>
-	</ul>
-	<h2>finished</h2>
-	<ul>
-		<li>mob psycho 100</li>
-		<li>paper girls</li>
-		<li>kaiba</li>
-		<li>neon genesis evangelion</li>
-		<li>over the garden wall</li>
-		<li>the bear</li>
-		<li>beef</li>
-		<li>better call saul</li>
-		<li>fionna and cake</li>
-		<li>breaking bad</li>
-		<li>adventure time</li>
-		<li>keep your hands off eizouken</li>
-		<li>hunter x hunter</li>
-		<li>madoka magica</li>
-		<li>the owl house</li>
-		<li>dorohedoro</li>
-		<li>bee and puppycat</li>
-		<li>devilman crybaby</li>
-		<li>andi mack</li>
-		<li>joe pera talks with you</li>
-		<li>clarence</li>
-	</ul>
-	<h2>want to watch</h2>
-	<ul>
-		<li>shows that <a href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
-		<li>ping pong the animation</li>
-		<li>tatami galaxy</li>
-	</ul>
+	<main>
+		<header>
+			<h1>TV log</h1>
+			<p>keeping track of the stuff i've watched that i've enjoyed + some thoughts on them. currently a WIP.</p>
+		</header>
+		<div id="wrapper">
+
+			<!--	TEMPLATE 
+						<div class="show">
+				<img src="!g/">
+				<div class="hov">
+					<div class="box">
+						<h3>title</h3>
+						<p>caption</p>
+						<p class="status">
+					</div>
+				</div>
+			</div>
+			-->
+
+			<div class="show">
+				<img src="!g/dungeon-meshi.png">
+				<div class="hov">
+					<div class="box">
+						<h3>dungeon meshi</h3>
+						<p>so cute and fun.</p>
+						<p class="status">status: s1 ep 21/24</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="show">
+				<img src="!g/utena.png">
+				<div class="hov">
+					<div class="box">
+						<h3>revolutionary girl utena</h3>
+						<p>i binged watched this when i got covid but then i got better and forgot about it... SOON i will finish you. found the story very intriguing.</p>
+						<p class="status">status: eps 27/39</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="show">
+				<img src="!g/morel%20orel.png">
+				<div class="hov">
+					<div class="box">
+						<h3>moral orel</h3>
+						<p>this show was such an emotional ride.</p>
+						<p>need to watch the special that released a few years ago.</p>
+						<p class="status">status: finished</p>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<h2>finished</h2>
+		<ul>
+			<li>mob psycho 100</li>
+			<li>paper girls</li>
+			<li>kaiba</li>
+			<li>neon genesis evangelion</li>
+			<li>over the garden wall</li>
+			<li>the bear</li>
+			<li>beef</li>
+			<li>better call saul</li>
+			<li>fionna and cake</li>
+			<li>breaking bad</li>
+			<li>adventure time</li>
+			<li>keep your hands off eizouken</li>
+			<li>hunter x hunter</li>
+			<li>the owl house</li>
+			<li>dorohedoro</li>
+			<li>bee and puppycat</li>
+			<li>devilman crybaby</li>
+			<li>andi mack</li>
+			<li>joe pera talks with you</li>
+			<li>clarence</li>
+		</ul>
+		<h2>want to watch</h2>
+		<ul>
+			<li>shows that <a href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
+			<li>ping pong the animation</li>
+			<li>tatami galaxy</li>
+		</ul>
+	</main>
 	<footer>
 		<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a>
 	</footer>
