--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,6 +34,10 @@
 		</article>
 -->
 			<article>
+				<p><b>15.jun.24 - 1pm</b> made some media log pages because notion is barely usable for meee. i think having them here will be better.</p>
+			</article>
+
+			<article>
 				<p><b>13.jun.24 - 1am:</b> i went to goodwill the other day and i bought 1) the least <small>(sarcasm)</small> outdated book on how to make a website published in 2004 and 2) a guide to cats published in 1983. <button onclick="showPic('!g/240613-books.png' , 'books' , 'books from goodwill. they were like 4 dollars usd in total.')">240613-books.png</button></p>
 			</article>
 
