minor change to home
tweaked nav hover

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -189,13 +189,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a>, sonic rush, MySims</p>
+			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> N/A</p>
-			<p><span class="hl">site:</span> working on some blog posts</p>
-			<p class="date">last updated on 12.jun.24</p>
+			<p><span class="hl">working on:</span> having a nice summer break!</p>
+			<p class="date">last updated on 15.jun.24</p>
 		</div>
 
 		<div id="updates" class="box">
@@ -448,7 +447,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			setTimeout(function() {
 				titleScroller(text.substr(1) + text.substr(0, 1));
 			}, 500);
-		}(" welcome to doqmeat.com ☆⌒(*＾-゜)v☆ enjoy your stay!"));
+		}("☆⌒(*＾-゜)v☆"));
 
 	</script>
 	<script src="!f/homepage-v3/last.fm.js">
