--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -41,7 +41,8 @@
 					<div class="box">
 						<h3>dungeon meshi</h3>
 						<p>so cute and fun.</p>
-						<p class="status">status: s1 ep 21/24</p>
+<p>had to watch the last few eps in the eng dub bc my mom wanted to understand what they were saying as she was knitting LOL</p>
+						<p class="status">status: finished</p>
 					</div>
 				</div>
 			</div>
