--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
+	<header>
+		<h1>TV log</h1>
+		<p>keeping track of the stuff i've watched that i've enjoyed + some thoughts on them. currently a WIP.</p>
+	</header>
 	<main>
-		<header>
-			<h1>TV log</h1>
-			<p>keeping track of the stuff i've watched that i've enjoyed + some thoughts on them. currently a WIP.</p>
-		</header>
 		<div id="wrapper">
 
 			<!--	TEMPLATE 
@@ -41,8 +41,8 @@
 					<div class="box">
 						<h3>dungeon meshi</h3>
 						<p>so cute and fun.</p>
-<p>had to watch the last few eps in the eng dub bc my mom wanted to understand what they were saying as she was knitting LOL</p>
-						<p class="status">status: finished</p>
+						<p>had to watch the last few eps in the eng dub bc my mom wanted to understand what they were saying as she was knitting LOL</p>
+						<p class="status">finished</p>
 					</div>
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 					<div class="box">
 						<h3>revolutionary girl utena</h3>
 						<p>i binged watched this when i got covid but then i got better and forgot about it... SOON i will finish you. found the story very intriguing.</p>
-						<p class="status">status: eps 27/39</p>
+						<p class="status">eps 27/39</p>
 					</div>
 				</div>
 			</div>
@@ -63,47 +63,61 @@
 				<div class="hov">
 					<div class="box">
 						<h3>moral orel</h3>
-						<p>this show was such an emotional ride.</p>
+						<p>this show was such an emotional ride :')</p>
+						<p>some parts of the show <i>really</i> got to me. specially having grown up in such a christian environment. i get it.</p>
+						<p>my heart was so heavy when i finished watching it. orel i love you so much.</p>
 						<p>need to watch the special that released a few years ago.</p>
-						<p class="status">status: finished</p>
+						<p class="status">finished</p>
 					</div>
 				</div>
 			</div>
 
+
+			<!--wrapper end div-->
 		</div>
-		<h2>finished</h2>
-		<ul>
-			<li>mob psycho 100</li>
-			<li>paper girls</li>
-			<li>kaiba</li>
-			<li>neon genesis evangelion</li>
-			<li>over the garden wall</li>
-			<li>the bear</li>
-			<li>beef</li>
-			<li>better call saul</li>
-			<li>fionna and cake</li>
-			<li>breaking bad</li>
-			<li>adventure time</li>
-			<li>keep your hands off eizouken</li>
-			<li>hunter x hunter</li>
-			<li>the owl house</li>
-			<li>dorohedoro</li>
-			<li>bee and puppycat</li>
-			<li>devilman crybaby</li>
-			<li>andi mack</li>
-			<li>joe pera talks with you</li>
-			<li>clarence</li>
-		</ul>
-		<h2>want to watch</h2>
-		<ul>
-			<li>shows that <a href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
-			<li>ping pong the animation</li>
-			<li>tatami galaxy</li>
-		</ul>
+		<details>
+			<summary>finished</summary>
+			<p>will put them up there as i work on this page!</p>
+			<ul>
+				<li>smiling friends</li>
+				<li>mob psycho 100</li>
+				<li>paper girls</li>
+				<li>kaiba</li>
+				<li>neon genesis evangelion</li>
+				<li>over the garden wall</li>
+				<li>the bear</li>
+				<li>beef</li>
+				<li>better call saul</li>
+				<li>fionna and cake</li>
+				<li>breaking bad</li>
+				<li>adventure time</li>
+				<li>keep your hands off eizouken</li>
+				<li>hunter x hunter</li>
+				<li>the owl house</li>
+				<li>dorohedoro</li>
+				<li>bee and puppycat</li>
+				<li>devilman crybaby</li>
+				<li>andi mack</li>
+				<li>joe pera talks with you</li>
+				<li>clarence</li>
+			</ul>
+		</details>
+
+		<details>
+			<summary>want to watch</summary>
+			<ul>
+				<li>shows that <a title="masaaki yuasa watchlist" href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
+				<li>ping pong the animation</li>
+				<li>tatami galaxy</li>
+			</ul>
+		</details>
 	</main>
 	<footer>
-		<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a>
+		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
+		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
+
+	<div id="home"><a title="go back home" href="/"><img src="/!g/deco/tv.gif"></a></div>
 </body>
 
 </html>
