--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -129,7 +129,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3>media logs</h3>
 			<a href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> video games</a>
-			<a title="WIP" href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows <img src="!g/pix/caution1.gif" alt=""></a>
+			<a title="WIP" href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows</a>
 			<a title="WIP" href="/books"><img src="/!g/pix/book3.gif" alt=""> books <img src="!g/pix/caution1.gif" alt=""></a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movies</a>
 			<h3>misc</h3>
@@ -191,7 +191,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> dungeon meshi</p>
+			<p><span class="hl">watching:</span> nothing ATM</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> having a nice summer break!</p>
 			<p class="date">last updated on 15.jun.24</p>
