journal log: guilt

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -199,6 +199,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>16.jun.24: journal log: <a href="/journal">guilt</a></li>
 			<li>12.jun.24: added new <a title="alterour setsuna pop + kokegane no uta" href="/music/cds">CD</a> to collection</li>
 			<li>09.jun.24: <a title="added sonic rush" href="/vgs">gaming log</a> updated</li>
 			<li>07.jun.24: new <a href="/collection/mail-stamps/index.html">mail stamp</a> in collection + <a href="/music/listening-log/2024/spring#5">dall</a> listening log</li>
