added flag counter to homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -367,6 +367,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<br>
 			<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site" target="_blank" title="enjoy my site? give it a clap!"><img src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en" alt="Web Clap by FC2" style="border:none;border-radius:10px;" /></a>
+
+			<a href="https://info.flagcounter.com/924j"><img src="https://s11.flagcounter.com/count/924j/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_15/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 		</div>
 
 		<div id="cat" class="box">
