--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -109,6 +109,7 @@
 				<li>shows that <a title="masaaki yuasa watchlist" href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
 				<li>ping pong the animation</li>
 				<li>tatami galaxy</li>
+				<li>sonny boy</li>
 			</ul>
 		</details>
 	</main>
