--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -215,6 +215,13 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
+			<a href="https://movieloverfls.org/3ds/index.php" target="_blank"><img src="!g/web/fanlisting-cliques/3ds.jpg" alt="3ds"></a>
+
+			<a href="https://puppyluv-listings.neocities.org/enhypen/" target="_blank"><img src="!g/web/fanlisting-cliques/enhypen.png" alt="enhypen"></a>
+
+			<a href="https://fan.cocorichelle.com/nekoatsume/index.php" target="_blank"><img src="!g/web/fanlisting-cliques/neko.png" alt="neko atsume"></a>
+
+			<a href="https://fans.thislove.nu/star/" target="_blank"><img src="!g/web/fanlisting-cliques/stargazing.gif" alt="stargazing"></a>
 
 			<a href="http://fan.after-death.org/magica" target="_blank"><img src="!g/web/fanlisting-cliques/madoka.png" alt="madoka fanlisting"></a>
 
