button wall updated

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -191,7 +191,9 @@
 			<a title="item64" href="https://item64.neocities.org" target="_blank"><img src="!g/item64.gif" alt="item64"></a>
 			<a title="crisis.city" href="https://crisis.city" target="_blank"><img src="!g/crisis.city.gif" alt="crisis.city"></a>
 			<a title="rice" href="https://rice.nekoweb.org/" target="_blank"><img src="https://rice.nekoweb.org/kamabokogonpachiro.gif"></a>
+			<a title="humantooth" href="https://humantooth.neocities.org" target="_blank"><img src="!g/humantooth.png" alt="humantooth"></a>
 		</div>
+
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
 		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> /
 			<a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> /
@@ -293,6 +295,8 @@
 			<a href="http://berry.heartette.net/" target="_blank"><img src="!g/berry.heartette.gif"></a>
 			<a title="lily - cute site of an artists i follow!" href="https://mothcub.neocities.org" target="_blank"><img src="!g/mothcub.gif"></a>
 			<a href="https://14-4ml.neocities.org/" target="_blank"><img src="!g/14-4ml.gif" alt="14-4ml"></a>
+			<a href="https://puppyluv.neocities.org/" target="_blank"><img src="!g/puppyluv.png" alt="puppyluv"></a>
+			<a href="https://xixxii.neocities.org/" target="_blank"><img src="!g/xixxii.gif" alt="xixxii"></a>
 		</div>
 
 		<div class="banner">
@@ -340,6 +344,7 @@
 		</div>
 		<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif" width="90px"></a>
 		<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif" width="90px"></a>
+		<a title="lots of cute old graphics" href="https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank"><img src="!g/ritvasgallery.gif" alt="ritva's gallery"></a>
 
 		<h4 id="fun">for fun!</h4>
 		<div class="neo">
