style savvy index

--- a/doqmeat/vgs/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/style-savvy-trendsetters/index.html
@@ -13,6 +13,17 @@
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
+	<style>
+		body {
+			background-image: url(bg.png);
+		}
+
+		main,
+		footer {
+			background: #DF8394;
+		}
+
+	</style>
 </head>
 
 <body>
@@ -22,19 +33,27 @@
 		<div class="info"><b>status: </b> currently</div>
 		<div class="info"><b>release date: </b> september 27, 2012</div>
 		<div class="info"><b>developer: </b> syn sophia</div>
-		<div class="info"><b>genre/type: </b> fashion sim</div>
+		<div class="info"><b>genre/type: </b> fashion, simulator</div>
 
 		<h3>logs</h3>
 		<p><span class="date">05.jun.24</span> i hacked my 3DS a couple of days ago and since then, my life has changed. i go a little bit into detail about this on a <a href="/journal/2024/06.html#4" target="_parent">journal log</a> but i've been meaning to play the older style savvy games ever since i started playing <a href="/vgs/fashion-dreamer/index.html">fashion dreamer</a> and oh boy!</p>
 		<center><img src="240605.jpg" style="max-width: 60%;"></center>
 		<p>i just got out of the "tutorial" part of the game and got made the manager of the boutique, but i am having soooo much fun already! <img src="/!g/pix/gaycat.gif" style="max-width:90%;"></p>
 
-		<h4>screenshots</h4>
+		<h3>screenshots</h3>
 		<center>
+			<h4>my character</h4>
+			<img src="240612%20(2).jpg" style="max-width:90%;">
+			<p>sorry all of my pics are in this pose FLSKFD</p>
+			<img src="240617%20(3).JPG" style="max-width:90%;">
+			<img src="240612%20(1).jpg" style="max-width:90%;">
 			<img src="240603%20(4).jpg" style="max-width:90%;">
 			<p> <small>look how cute i look!</small></p>
 			<img src="240603%20(3).jpg" style="max-width:90%;">
 			<img src="240603%20(2).jpg" style="max-width:90%;">
+			<h4>others</h4>
+			<img src="240617%20(1).JPG" style="max-width:90%;">
+			<img src="240617%20(2).JPG" style="max-width:90%;">
 		</center>
 
 	</main>
