added a mizu to index page

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -412,6 +412,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<img id="sticker27" class="deco" alt="">
 		<img id="sticker28" class="deco" alt="">
 		<img id="fixed-1" alt="">
+		<img id="mizu" class="deco" alt="">
 		<!--		wrapper end div-->
 	</div>
 
