minor tweak to savvy trendsetters

--- a/doqmeat/vgs/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/style-savvy-trendsetters/index.html
@@ -20,7 +20,13 @@
 
 		main,
 		footer {
-			background: #DF8394;
+			background: #b74056;
+			color: white;
+		}
+
+		a {
+			background: white;
+			padding: 0 1px;
 		}
 
 	</style>
