added frame links to journal

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -23,6 +23,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
+	<script src="https://melonking.net/scripts/frame-link.js"></script>
 </head>
 
 <body>
