--- a/doqmeat/journal/credit.html
+++ b/doqmeat/journal/credit.html
@@ -9,19 +9,26 @@
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="entry.css" rel="stylesheet" type="text/css" media="all">
+	<style>
+		p {
+			margin: 10px;
+		}
+
+	</style>
 </head>
 
 <body>
 	<div id="log">
 		<h1 style="margin: 20px 25px;">journal credits</h1>
-		<p><a href="/notebook/links/fonts">fonts</a> used: morningtea, gaegu</p>
-		<p>cute memo scans by <a href="https://www.flickr.com/photos/kawaiiscans/" target="_blank">kawaiiscans</a></p>
-		<p><a href="https://pastebin.com/PiDgrv3J" target="_blank">music player</a> code is by <a href="https://adilene.net/" target="_blank">adilene.net</a></p>
-		<p>blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></p>
-		<p>calendar iframe from <a href="http://calendar-muryou.com/blog.html" target="_blank">calendar-muryou</a></p>
-		<p>pencil cursor from <a href="https://www.cursors-4u.com/" target="_blank">cursors-4u</a></p>
-		<p>draggable js code from <a href="https://stackoverflow.com/questions/14695933/draggable-div-with-classname" target="_blank">stackoverflow</a></p>
-		<p>frame links from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>!</p>
+		<li>weather icons: <img src="weather/cloudy.gif"> <img src="weather/rain-l.gif"> <img src="weather/rain.gif"> <img src="weather/sun-cloud-rain.gif"> <img src="weather/sun-cloud.gif"> <img src="weather/sun-rain.gif"> <img src="weather/sunny.gif"> <img src="weather/thunder.gif"> <img src="weather/wind.gif"> are by <a href="https://tora7.ciao.jp/" target="_blank">tora.ciao.jp</a></li>
+		<li><a href="/notebook/links/fonts">fonts</a> used: morningtea, gaegu</li>
+		<li>cute memo scans by <a href="https://www.flickr.com/photos/kawaiiscans/" target="_blank">kawaiiscans</a></li>
+		<li><a href="https://pastebin.com/PiDgrv3J" target="_blank">music player</a> code is by <a href="https://adilene.net/" target="_blank">adilene.net</a></li>
+		<li>blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></li>
+		<li>calendar iframe from <a href="http://calendar-muryou.com/blog.html" target="_blank">calendar-muryou</a></li>
+		<li>pencil cursor from <a href="https://www.cursors-4u.com/" target="_blank">cursors-4u</a></li>
+		<li>draggable js code from <a href="https://stackoverflow.com/questions/14695933/draggable-div-with-classname" target="_blank">stackoverflow</a></li>
+		<li>frame links from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>!</li>
 	</div>
 </body>
 
